--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "homepage": "https://github.com/quocbinh-npm9081/React-API-Movie-App.git",
+    "homepage": "https://quocbinh-npm9081.github.io/React-API-Movie-App.git",
     "name": "react-api-bmovie",
     "version": "0.1.0",
     "private": true,
